[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Axium_yu",email = "1738884091@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics (>=8.3.203,<9.0.0)"
]

[tool.poetry]
packages = [{include = "demo", from = "src"}]

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
