[project]
name = "bytetrack"
version = "0.1.0"
description = ""
authors = [
    {name = "Axium_yu",email = "1738884091@qq.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "h5py (>=3.11,<3.12)",
    "numpy (==1.24.4)",
    "torch (==2.4.1)",
    "torchvision (==0.19.1)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "scikit-image (==0.18.3)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (==8.4.0)",
    "thop (>=0.1.1.post2209072238,<0.2.0)",
    "ninja (>=1.13.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tensorboard (==2.6.0)",
    "lap (>=0.5.12,<0.6.0)",
    "motmetrics (>=1.4.0,<2.0.0)",
    "filterpy (>=1.4.5,<2.0.0)",
    "onnx (==1.8.1)",
    "onnxruntime (==1.8.0)",
    "onnx-simplifier (==0.3.5)",
    "cython (==0.29.37)",
    "pycocotools (==2.0.7)",
    "cython-bbox (>=0.1.5,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"